[project]
name = "valkey-glide"
dynamic = ["version"]
description = "Valkey GLIDE Async client. Supports Valkey and Redis OSS."
requires-python = ">=3.9"
dependencies = [
    # Note: If you add a dependency here, make sure to also add it to glide-async/requirements.txt
    # Once issue https://github.com/aboutcode-org/python-inspector/issues/197 is resolved, the requirements.txt file can be removed.
    # Note: valkey-glide-shared is bundled inside the wheel (not a pip dependency)
    # because it contains platform-specific .so files built alongside this package.
    "anyio[trio]>=4.9.0",
    "cffi>=1.0.0",
    "protobuf>=3.20",
    "sniffio",
    "typing-extensions>=4.8.0; python_version < '3.11'",
]
classifiers = [
    "Topic :: Database",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin==0.14.17"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
include = [
    "glide_shared/**/*.py",
    "glide_shared/*.so",
    "glide_shared/*.dylib",
    "glide_shared/*.dll",
]
